--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <body>
   <h1>Privacy Policy</h1>
   <p>This App will come soon :) </p>
-  <a href="/index.html">Home</a>
+  <a href="/">Home</a>
 </body>
 </html>
 
