--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!-- index.html -->
-<html>
-<head><title>My App</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>JoinMe – Coming Soon</title>
+  <script src="lang.js" defer></script>
+</head>
 <body>
-  <h1>Welcome to 'JoinMe'</h1>
-  <p>This App will come soon :) </p>
-  <a href="/privacy.html">Privacy Policy</a>
+  <div style="text-align:center; margin-top: 100px;">
+    <h1 data-en="JoinMe is coming soon!" data-de="JoinMe kommt bald!"></h1>
+    <p data-en="We're working hard on the app." data-de="Wir arbeiten fleißig an der App."></p>
+
+    <p>
+      <a href="privacy.html" data-en="Privacy Policy" data-de="Datenschutz"></a>
+    </p>
+
+    <div>
+      <button data-set-lang="en">🇬🇧 English</button>
+      <button data-set-lang="de">🇩🇪 Deutsch</button>
+    </div>
+  </div>
 </body>
 </html>
-
