--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,22 @@
-<!-- index.html -->
-<html>
-<head><title>My App</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Privacy Policy – JoinMe</title>
+  <script src="lang.js" defer></script>
+</head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>This App will come soon :) </p>
-  <a href="/">Home</a>
+  <div style="padding: 2em;">
+    <h1 data-en="Privacy Policy" data-de="Datenschutzerklärung"></h1>
+    <p data-en="We respect your privacy. This app does not collect any personal data."
+       data-de="Wir respektieren Ihre Privatsphäre. Diese App sammelt keine persönlichen Daten."></p>
+
+    <p><a href="index.html" data-en="Back to Home" data-de="Zurück zur Startseite"></a></p>
+
+    <div>
+      <button data-set-lang="en">🇬🇧 English</button>
+      <button data-set-lang="de">🇩🇪 Deutsch</button>
+    </div>
+  </div>
 </body>
 </html>
-
