--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,7 +11,7 @@
     <p data-en="We respect your privacy. This app does not collect any personal data."
        data-de="Wir respektieren Ihre Privatsphäre. Diese App sammelt keine persönlichen Daten."></p>
 
-    <p><a href="index.html" data-en="Back to Home" data-de="Zurück zur Startseite"></a></p>
+    <p><a href="/" data-en="Back to Home" data-de="Zurück zur Startseite"></a></p>
 
     <div>
       <button data-set-lang="en">🇬🇧 English</button>
