--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p data-en="We're working hard on the app." data-de="Wir arbeiten fleißig an der App."></p>
 
     <p>
-      <a href="privacy-policy.html" data-en="Privacy Policy" data-de="Datenschutz"></a>
+      <a href="/privacy-policy.html" data-en="Privacy Policy" data-de="Datenschutz"></a>
     </p>
 
     <div>
