--- a/index.html
+++ b/index.html
@@ -33,3 +33,28 @@
   <div class="lang-menu">
     <select id="langSelector" onchange="setLang(this.value)">
       <option value="en">🇬🇧 English</option>
+      <option value="de">🇩🇪 Deutsch</option>
+    </select>
+  </div>
+
+  <h1 data-i18n="title"></h1>
+  <p data-i18n="description"></p>
+
+  <a data-i18n="privacyLink" data-href-i18n="privacy" href="/privacy-policy.html">Privacy</a>
+  <br>
+  <a data-i18n="termsLink" data-href-i18n="terms" href="/terms.html">Terms</a>
+
+  <script>
+    function setLang(lang) {
+      localStorage.setItem('lang', lang);
+      loadLanguage(lang);
+      document.getElementById("langSelector").value = lang;
+    }
+
+    const currentLang = new URLSearchParams(location.search).get("lang") ||
+                        localStorage.getItem("lang") || "en";
+    document.getElementById("langSelector").value = currentLang;
+    loadLanguage(currentLang);
+  </script>
+</body>
+</html>
