--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <h1 data-i18n="title"></h1>
   <p data-i18n="description"></p>
 
-  <a data-i18n="privacyLink" data-href-i18n="privacy" href="/privacy-policy.html">Privacy</a>
+  <a data-i18n="privacyLink" data-href-i18n="privacy-policy" href="/privacy-policy.html">Privacy</a>
   <br>
   <a data-i18n="termsLink" data-href-i18n="terms" href="/terms.html">Terms</a>
 
