agb start styling

--- a/index.html
+++ b/index.html
@@ -2,59 +2,206 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>JoinMe</title>
-  <script src="/js/i18n.js"></script>
+  <title>JoinMe – Meet New People</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    :root {
+      --primary: #16a34a;
+      --dark: #1c1c1c;
+      --light: #ffffff;
+      --accent: #f5f5f5;
+    }
+
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 1rem;
+      background: var(--light);
+      color: var(--dark);
+    }
+
+    header {
+      background: linear-gradient(135deg, var(--primary), #6aa9f9);
+      padding: 2rem;
+      color: white;
+      text-align: center;
+      position: relative;
     }
 
     .lang-menu {
       position: absolute;
-      top: 10px;
-      right: 20px;
+      top: 1rem;
+      right: 1.5rem;
     }
 
     .lang-menu select {
       font-size: 1rem;
-      padding: 0.25rem;
+      padding: 0.3rem;
     }
 
-    h1 {
-      margin-top: 60px;
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+    }
+
+    .section {
+      padding: 3rem 1rem;
+      max-width: 960px;
+      margin: auto;
+    }
+
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .feature {
+      flex: 1 1 250px;
+      background: var(--accent);
+      padding: 1.5rem;
+      border-radius: 12px;
+    }
+
+    .feature h3 {
+      margin-top: 0;
+      color: var(--primary);
+    }
+
+    .cta {
+      text-align: center;
+      margin-top: 3rem;
+    }
+
+    .cta button {
+      background: var(--primary);
+      border: none;
+      color: white;
+      font-size: 1.1rem;
+      padding: 0.8rem 2rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      background: var(--accent);
+    }
+
+    footer a {
+      margin: 0 1rem;
+      color: var(--primary);
+      text-decoration: none;
+    }
+
+    @media (max-width: 600px) {
+      .features {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Language Switcher -->
+<header>
   <div class="lang-menu">
     <select id="langSelector" onchange="setLang(this.value)">
       <option value="en">🇬🇧 English</option>
       <option value="de">🇩🇪 Deutsch</option>
     </select>
   </div>
+  <h1 data-i18n="title">JoinMe</h1>
+  <p data-i18n="subtitle">Meet new people in real life</p>
+</header>
 
-  <h1 data-i18n="title"></h1>
-  <p data-i18n="description"></p>
+<div class="section">
+  <h2 data-i18n="howItWorksTitle">How It Works</h2>
+  <p data-i18n="howItWorksText">
+    Create a profile, join events, chat with others, and meet up – JoinMe is your app to meet real people in your area.
+  </p>
 
-  <a data-i18n="privacyLink" data-href-i18n="privacy-policy" href="/privacy-policy.html">Privacy</a>
-  <br>
-  <a data-i18n="termsLink" data-href-i18n="terms" href="/terms.html">Terms</a>
+  <div class="features">
+    <div class="feature">
+      <h3 data-i18n="feature1Title">👤 Profiles</h3>
+      <p data-i18n="feature1Text">Everyone creates a profile with interests and location. Easy to discover and connect.</p>
+    </div>
+    <div class="feature">
+      <h3 data-i18n="feature2Title">💬 Chat</h3>
+      <p data-i18n="feature2Text">Use our secure chat to communicate before meeting up.</p>
+    </div>
+    <div class="feature">
+      <h3 data-i18n="feature3Title">📍 Events</h3>
+      <p data-i18n="feature3Text">Find public or private meetups, or create your own. It’s your space.</p>
+    </div>
+  </div>
 
-  <script>
-    function setLang(lang) {
-      localStorage.setItem('lang', lang);
-      loadLanguage(lang);
-      document.getElementById("langSelector").value = lang;
+  <div class="cta">
+    <button data-i18n="ctaButton">Download the App</button>
+  </div>
+</div>
+
+<footer>
+  <a href="/privacy-policy.html" data-i18n="privacyLink">Privacy Policy</a>
+  <a href="/terms.html" data-i18n="termsLink">Terms & Conditions</a>
+</footer>
+
+<script>
+  const translations = {
+    en: {
+      title: "JoinMe",
+      subtitle: "Meet new people in real life",
+      howItWorksTitle: "How It Works",
+      howItWorksText: "Create a profile, join events, chat with others, and meet up – JoinMe is your app to meet real people in your area.",
+      feature1Title: "👤 Profiles",
+      feature1Text: "Everyone creates a profile with interests and location. Easy to discover and connect.",
+      feature2Title: "💬 Chat",
+      feature2Text: "Use our secure chat to communicate before meeting up.",
+      feature3Title: "📍 Events",
+      feature3Text: "Find public or private meetups, or create your own. It’s your space.",
+      ctaButton: "Download the App",
+      privacyLink: "Privacy Policy",
+      termsLink: "Terms & Conditions"
+    },
+    de: {
+      title: "JoinMe",
+      subtitle: "Lerne neue Leute im echten Leben kennen",
+      howItWorksTitle: "So funktioniert's",
+      howItWorksText: "Erstelle ein Profil, finde Events, chatte mit anderen und triff dich – JoinMe ist deine App für echte Begegnungen in deiner Nähe.",
+      feature1Title: "👤 Profile",
+      feature1Text: "Jeder erstellt ein Profil mit Interessen und Standort. Einfach entdecken und vernetzen.",
+      feature2Title: "💬 Chat",
+      feature2Text: "Nutze unseren sicheren Chat, um dich vor dem Treffen auszutauschen.",
+      feature3Title: "📍 Events",
+      feature3Text: "Finde öffentliche oder private Treffen oder erstelle dein eigenes. Du gestaltest es.",
+      ctaButton: "App herunterladen",
+      privacyLink: "Datenschutz",
+      termsLink: "AGB"
     }
+  };
 
-    const currentLang = new URLSearchParams(location.search).get("lang") ||
-                        localStorage.getItem("lang") || "en";
-    document.getElementById("langSelector").value = currentLang;
-    loadLanguage(currentLang);
-  </script>
+  function setLang(lang) {
+    localStorage.setItem('lang', lang);
+    loadLanguage(lang);
+    document.getElementById("langSelector").value = lang;
+  }
+
+  function loadLanguage(lang) {
+    const trans = translations[lang] || translations.en;
+    document.querySelectorAll('[data-i18n]').forEach(el => {
+      const key = el.getAttribute('data-i18n');
+      if (trans[key]) el.innerText = trans[key];
+    });
+  }
+
+  const currentLang = localStorage.getItem('lang') || 'en';
+  document.getElementById('langSelector').value = currentLang;
+  loadLanguage(currentLang);
+</script>
 </body>
 </html>
