--- a/index.html
+++ b/index.html
@@ -4,108 +4,7 @@
   <meta charset="UTF-8" />
   <title>JoinMe – Meet New People</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    :root {
-      --primary: #16a34a;
-      --dark: #1c1c1c;
-      --light: #ffffff;
-      --accent: #f5f5f5;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: var(--light);
-      color: var(--dark);
-    }
-
-    header {
-      background: linear-gradient(135deg, var(--primary), #6aa9f9);
-      padding: 2rem;
-      color: white;
-      text-align: center;
-      position: relative;
-    }
-
-    .lang-menu {
-      position: absolute;
-      top: 1rem;
-      right: 1.5rem;
-    }
-
-    .lang-menu select {
-      font-size: 1rem;
-      padding: 0.3rem;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
-    }
-
-    .section {
-      padding: 3rem 1rem;
-      max-width: 960px;
-      margin: auto;
-    }
-
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-
-    .feature {
-      flex: 1 1 250px;
-      background: var(--accent);
-      padding: 1.5rem;
-      border-radius: 12px;
-    }
-
-    .feature h3 {
-      margin-top: 0;
-      color: var(--primary);
-    }
-
-    .cta {
-      text-align: center;
-      margin-top: 3rem;
-    }
-
-    .cta button {
-      background: var(--primary);
-      border: none;
-      color: white;
-      font-size: 1.1rem;
-      padding: 0.8rem 2rem;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      background: var(--accent);
-    }
-
-    footer a {
-      margin: 0 1rem;
-      color: var(--primary);
-      text-decoration: none;
-    }
-
-    @media (max-width: 600px) {
-      .features {
-        flex-direction: column;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -120,10 +19,20 @@
   <p data-i18n="subtitle">Meet new people in real life</p>
 </header>
 
+<nav>
+  <a href="index.html" data-i18n="nav.home">Home</a>
+  <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
+  <a href="how.html" data-i18n="nav.how">How it works</a>
+  <a href="safety.html" data-i18n="nav.safety">Safety</a>
+  <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+  <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+</nav>
+
 <div class="section">
-  <h2 data-i18n="howItWorksTitle">How It Works</h2>
-  <p data-i18n="howItWorksText">
-    Create a profile, join events, chat with others, and meet up – JoinMe is your app to meet real people in your area.
+  <h2 data-i18n="index.heading">How JoinMe Works</h2>
+  <p data-i18n="index.description">
+    JoinMe helps you meet new people in your area based on your interests.
+    Join events, chat with members, and enjoy real-life meetups.
   </p>
 
   <div class="features">
@@ -147,8 +56,8 @@
 </div>
 
 <footer>
-  <a href="/privacy-policy.html" data-i18n="privacyLink">Privacy Policy</a>
-  <a href="/terms.html" data-i18n="termsLink">Terms & Conditions</a>
+  <a href="privacy-policy.html" data-i18n="privacyLink">Privacy</a>
+  <a href="terms.html" data-i18n="termsLink">Terms</a>
 </footer>
 
 <script>
@@ -156,8 +65,18 @@
     en: {
       title: "JoinMe",
       subtitle: "Meet new people in real life",
-      howItWorksTitle: "How It Works",
-      howItWorksText: "Create a profile, join events, chat with others, and meet up – JoinMe is your app to meet real people in your area.",
+      nav: {
+        home: "Home",
+        why: "Why JoinMe",
+        how: "How it works",
+        safety: "Safety",
+        screenshots: "Screenshots",
+        faq: "FAQ"
+      },
+      index: {
+        heading: "How JoinMe Works",
+        description: "JoinMe helps you meet new people in your area based on your interests. Join events, chat with members, and enjoy real-life meetups."
+      },
       feature1Title: "👤 Profiles",
       feature1Text: "Everyone creates a profile with interests and location. Easy to discover and connect.",
       feature2Title: "💬 Chat",
@@ -165,14 +84,24 @@
       feature3Title: "📍 Events",
       feature3Text: "Find public or private meetups, or create your own. It’s your space.",
       ctaButton: "Download the App",
-      privacyLink: "Privacy Policy",
-      termsLink: "Terms & Conditions"
+      privacyLink: "Privacy",
+      termsLink: "Terms"
     },
     de: {
       title: "JoinMe",
       subtitle: "Lerne neue Leute im echten Leben kennen",
-      howItWorksTitle: "So funktioniert's",
-      howItWorksText: "Erstelle ein Profil, finde Events, chatte mit anderen und triff dich – JoinMe ist deine App für echte Begegnungen in deiner Nähe.",
+      nav: {
+        home: "Startseite",
+        why: "Warum JoinMe",
+        how: "Wie es funktioniert",
+        safety: "Sicherheit",
+        screenshots: "Screenshots",
+        faq: "FAQ"
+      },
+      index: {
+        heading: "Wie JoinMe funktioniert",
+        description: "JoinMe hilft dir, neue Leute in deiner Umgebung zu treffen. Nimm an Events teil, chatte mit anderen und verabrede dich im echten Leben."
+      },
       feature1Title: "👤 Profile",
       feature1Text: "Jeder erstellt ein Profil mit Interessen und Standort. Einfach entdecken und vernetzen.",
       feature2Title: "💬 Chat",
@@ -186,21 +115,24 @@
   };
 
   function setLang(lang) {
-    localStorage.setItem('lang', lang);
+    localStorage.setItem("lang", lang);
     loadLanguage(lang);
     document.getElementById("langSelector").value = lang;
   }
 
   function loadLanguage(lang) {
-    const trans = translations[lang] || translations.en;
-    document.querySelectorAll('[data-i18n]').forEach(el => {
-      const key = el.getAttribute('data-i18n');
-      if (trans[key]) el.innerText = trans[key];
+    const t = translations[lang] || translations["en"];
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+      const key = el.dataset.i18n;
+      const keys = key.split('.');
+      let value = t;
+      for (const k of keys) value = value[k];
+      if (value) el.innerText = value;
     });
   }
 
-  const currentLang = localStorage.getItem('lang') || 'en';
-  document.getElementById('langSelector').value = currentLang;
+  const currentLang = localStorage.getItem("lang") || "en";
+  document.getElementById("langSelector").value = currentLang;
   loadLanguage(currentLang);
 </script>
 </body>
