agb start styling

--- a/terms.html
+++ b/terms.html
@@ -9,8 +9,7 @@
 <p><strong>für die Nutzung der App JoinMe</strong></p>
 
 <h2>1. Geltungsbereich</h2>
-<p>Diese Allgemeinen Geschäftsbedingungen (AGB) gelten für die Nutzung der mobilen Applikation <strong>JoinMe</strong>, die von [Ihr Name oder Firmenname, Adresse, E-Mail] betrieben wird.</p>
-
+<p>Diese Allgemeinen Geschäftsbedingungen (AGB) gelten für die Nutzung der mobilen Applikation <strong>JoinMe</strong>, die von Yaser Selim mit Sitz in Brandenburg, Deutschland, betrieben wird. Bei Fragen kontaktieren Sie uns bitte per E-Mail unter yaserselim13@gmail.com.</p>
 <h2>2. Registrierung und Nutzungsberechtigung</h2>
 <p>(1) Die Nutzung der App setzt eine vorherige Registrierung voraus.</p>
 <p>(2) Die Nutzung ist ausschließlich natürlichen Personen gestattet, die das 18. Lebensjahr vollendet haben.</p>
