--- a/why.html
+++ b/why.html
@@ -27,21 +27,42 @@
     <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
     <a href="faq.html" data-i18n="nav.faq">FAQ</a>
 </nav>
-
 <div class="section">
     <h2 data-i18n="why.title">Why JoinMe?</h2>
     <p data-i18n="why.text">
-        JoinMe gives you the easiest way to meet people who share your interests. Whether you are new in town, looking for friends, or organizing events — JoinMe is the perfect place to start.
-    </p>
-</div>
+        Sick of scrolling through endless cat videos and memes?
+        Ready to take a break from your screen and actually meet cool people nearby?
 
+        Whether you’re new in town, bored of gaming marathons, or just craving some fresh faces — JoinMe is your go-to app for real-life fun!
+
+        Find friends who vibe with your interests
+
+        Join or create local events and hangouts
+
+        Discover your city through new eyes (and new people!)
+
+        Turn those online chats into real smiles and high-fives
+
+        Life’s too short to just watch from the sidelines — jump in and start making memories today with JoinMe!
+    </p>
+    <section class="activities" style="padding: 2rem; background-color: #f9f9f9;">
+        <h2 style="font-size: 2rem; text-align: center; margin-bottom: 1rem;">What Can You Do with JoinMe?</h2>
+        <ul style="list-style: none; padding: 0; max-width: 600px; margin: 0 auto;">
+            <li style="padding: 0.5rem 0;">🌿 Go for a walk in the park and try to name the plants together</li>
+            <li style="padding: 0.5rem 0;">🧗‍♀️ Discover local climbing gyms with other adventurers</li>
+            <li style="padding: 0.5rem 0;">🎨 Join a street art or sketch walk with creative minds</li>
+            <li style="padding: 0.5rem 0;">📚 Organize a chill coffee & book chat at your favorite café</li>
+            <li style="padding: 0.5rem 0;">🎮 Start a casual game night — board games or Mario Kart, your pick!</li>
+            <li style="padding: 0.5rem 0;">🚴‍♂️ Explore your city on a group bike ride</li>
+            <li style="padding: 0.5rem 0;">🎤 Find others who love karaoke and belt out some tunes</li>
+            <li style="padding: 0.5rem 0;">🍕 Meet for a pizza picnic in the park — toppings debate included</li>
+        </ul>
+    </section>
+</div>
 <footer>
     <a href="privacy-policy.html" data-i18n="privacyLink">Privacy</a>
     <a href="terms.html" data-i18n="termsLink">Terms</a>
 </footer>
-
-<script>
-    // Reuse same translation logic as in index.html
-</script>
+<script src="js/main.js"></script>
 </body>
 </html>
