agb start styling

--- a/documentation.html
+++ b/documentation.html
@@ -29,9 +29,14 @@
     <a href="faq.html" data-i18n="nav.faq">FAQ</a>
 </nav>
 <div class="section">
-    <h2 data-i18n="why.title">Why JoinMe?</h2>
-    <p data-i18n="why.text">
-        JoinMe gives you the easiest way to meet people who share your interests. Whether you are new in town, looking for friends, or organizing events — JoinMe is the perfect place to start.
+    <h2 id="delete-account">Delete Account</h2>
+    <p>
+        You can request to delete your JoinMe account and all associated personal data at any time.
+        To delete your account, please visit the <a href="/account-settings.html">Account Settings</a> page inside the app or contact our support team at
+        <a href="mailto:support@joinme.com">support@joinme.com</a>.
+    </p>
+    <p>
+        Once your request is processed, your account and data will be permanently removed from our servers.
     </p>
 </div>
 <footer>
