--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <a href="how.html" data-i18n="nav.how">How it works</a>
   <a href="safety.html" data-i18n="nav.safety">Safety</a>
   <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+  <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
   <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+
 </nav>
 
 <div class="section">
