agb start styling

--- a/safety.html
+++ b/safety.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Why JoinMe</title>
+    <title data-i18n="safety.title">Safety Standards</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -25,19 +25,48 @@
     <a href="how.html" data-i18n="nav.how">How it works</a>
     <a href="safety.html" data-i18n="nav.safety">Safety</a>
     <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
+    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>
     <a href="faq.html" data-i18n="nav.faq">FAQ</a>
 </nav>
-<div class="section">
-    <h2 data-i18n="why.title">Why JoinMe?</h2>
-    <p data-i18n="why.text">
-        JoinMe gives you the easiest way to meet people who share your interests. Whether you are new in town, looking for friends, or organizing events — JoinMe is the perfect place to start.
+
+<main class="section">
+    <h2 data-i18n="safety.title">Safety Standards</h2>
+
+    <p data-i18n="safety.intro">
+        We are committed to keeping JoinMe a safe space for all users, especially protecting minors from abuse or exploitation.
     </p>
-</div>
+
+    <h3 data-i18n="safety.section1.title">1. Content Moderation</h3>
+    <p data-i18n="safety.section1.text">
+        All content is monitored using automated tools and human moderation. Inappropriate content is promptly removed.
+    </p>
+
+    <h3 data-i18n="safety.section2.title">2. Age Restrictions</h3>
+    <p data-i18n="safety.section2.text">
+        JoinMe is intended for users 18 and older. We monitor reports of underage usage and remove accounts that violate this policy.
+    </p>
+
+    <h3 data-i18n="safety.section3.title">3. Reporting Tools</h3>
+    <p data-i18n="safety.section3.text">
+        Users can report harmful behavior through the app. We respond to all safety-related reports within 24 hours.
+    </p>
+
+    <h3 data-i18n="safety.section4.title">4. Law Enforcement Cooperation</h3>
+    <p data-i18n="safety.section4.text">
+        We report CSAE content to appropriate authorities, including NCMEC or INHOPE.
+    </p>
+
+    <h3 data-i18n="safety.section5.title">5. Contact Information</h3>
+    <p>
+        <span data-i18n="safety.section5.text">To report abuse, email us at</span>: <a href="mailto:support@join-me-app.com">support@join-me-app.com</a>
+    </p>
+</main>
+
 <footer>
     <a href="privacy-policy.html" data-i18n="privacyLink">Privacy</a>
     <a href="terms.html" data-i18n="termsLink">Terms</a>
 </footer>
+
 <script src="js/main.js"></script>
 </body>
 </html>
