--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,6 @@
 <footer>
-    <a href="privacy-policy.html" data-i18n="privacyLink">Privacy</a>
-    <a href="terms.html" data-i18n="termsLink">Terms</a>
+    <a href="privacy-policy.html" target="_blank" data-i18n="footer.privacyLink">Privacy Policy</a>
+    <a href="terms.html" target="_blank" data-i18n="footer.termsLink">Terms</a>
+    <a href="mailto:support@join-me-app.com" data-i18n="footer.contact">Contact</a>:
+    <span class="support-email">support@join-me-app.com</span>
 </footer>
