--- a/registration.html
+++ b/registration.html
@@ -20,6 +20,8 @@
   </p>
 </div>
 
+<script src="js/en.js"></script>
+<script src="js/de.js"></script>
 <script src="js/main.js"></script>
 <script>
   const urlParams = new URLSearchParams(window.location.search);
