--- a/index.html
+++ b/index.html
@@ -1,66 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>JoinMe – Meet New People</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8"/>
+    <title>JoinMe – Meet New People</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
 <header>
-  <div class="lang-menu">
-    <select id="langSelector" onchange="setLang(this.value)">
-      <option value="en">🇬🇧 English</option>
-      <option value="de">🇩🇪 Deutsch</option>
-    </select>
-  </div>
-  <h1 data-i18n="title">JoinMe</h1>
-  <p data-i18n="subtitle">Meet new people in real life</p>
+    <div class="lang-menu">
+        <select id="langSelector" onchange="setLang(this.value)">
+            <option value="en">🇬🇧 English</option>
+            <option value="de">🇩🇪 Deutsch</option>
+        </select>
+    </div>
+
+    <div class="branding">
+        <img src="images/logo.png" alt="JoinMe App Logo" class="logo"/>
+        <h1 data-i18n="title">JoinMe</h1>
+    </div>
+    <p data-i18n="subtitle">Meet new people in real life</p>
+
+    <div class="store-buttons">
+        <a href="https://play.google.com/store/apps/details?id=YOUR_APP_ID" target="_blank">
+            <img src="images/google-play.png" alt="Get it on Google Play" class="store-badge"/>
+        </a>
+        <a href="https://apps.apple.com/app/idYOUR_APP_ID" target="_blank">
+            <img src="images/app-store.png" alt="Download on the App Store" class="store-badge"/>
+        </a>
+    </div>
+
 </header>
 
+
 <nav>
-  <a href="index.html" data-i18n="nav.home">Home</a>
-  <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
-  <a href="how.html" data-i18n="nav.how">How it works</a>
-  <a href="safety.html" data-i18n="nav.safety">Safety</a>
-  <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
-  <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
-  <a href="faq.html" data-i18n="nav.faq">FAQ</a>
+    <a href="index.html" data-i18n="nav.home">Home</a>
+    <a href="why.html" data-i18n="nav.why">Why JoinMe</a>
+    <a href="how.html" data-i18n="nav.how">How it works</a>
+    <a href="safety.html" data-i18n="nav.safety">Safety</a>
+    <a href="screenshots.html" data-i18n="nav.screenshots">Screenshots</a>
+    <a href="documentation.html" data-i18n="nav.documentation">Documentation</a>  <!-- New link here -->
+    <a href="faq.html" data-i18n="nav.faq">FAQ</a>
 
 </nav>
 
 <div class="section">
-  <h2 data-i18n="index.heading">How JoinMe Works</h2>
-  <p data-i18n="index.description">
-    JoinMe helps you meet new people in your area based on your interests.
-    Join events, chat with members, and enjoy real-life meetups.
-  </p>
+    <h2 data-i18n="index.heading">How JoinMe Works</h2>
+    <p data-i18n="index.description">
+        JoinMe helps you meet new people in your area based on your interests.
+        Join activities, chat with members, and enjoy real-life meetups.
+    </p>
 
-  <div class="features">
-    <div class="feature">
-      <h3 data-i18n="feature1Title">👤 Profiles</h3>
-      <p data-i18n="feature1Text">Everyone creates a profile with interests and location. Easy to discover and connect.</p>
+    <div class="features">
+        <div class="feature">
+            <h3 data-i18n="feature1Title">📍 Spontaneous</h3>
+            <p data-i18n="feature1Text">Life’s best moments are spontaneous. Create or join instant activities nearby —
+                from a quick coffee to a late-night party. Perfect when you’re feeling social and want to meet people
+                right now.</p>
+        </div>
+        <div class="feature">
+            <h3 data-i18n="feature2Title">📅 Planned</h3>
+            <p data-i18n="feature2Text">Turn ideas into real plans and make your week more exciting. Create your own
+                activities or join those from others — today, tomorrow, or anytime in the next 7 days. From hiking and
+                sports to shopping or study groups, it’s all up to you.</p>
+        </div>
+        <div class="feature">
+            <h3 data-i18n="feature3Title">✅ Safe & Flexible</h3>
+            <p data-i18n="feature3Text">Take charge of your meetups: approve who joins and chat only when you’re ready.
+                See all activity details upfront — time, place, and type.
+                Create your own adventures or join spontaneous and planned activities anytime.
+                Feel secure, stay in control, and enjoy real-life connections on your terms.</p>
+        </div>
     </div>
-    <div class="feature">
-      <h3 data-i18n="feature2Title">💬 Chat</h3>
-      <p data-i18n="feature2Text">Use our secure chat to communicate before meeting up.</p>
-    </div>
-    <div class="feature">
-      <h3 data-i18n="feature3Title">📍 Events</h3>
-      <p data-i18n="feature3Text">Find public or private meetups, or create your own. It’s your space.</p>
-    </div>
-  </div>
-
-  <div class="cta">
-    <button data-i18n="ctaButton">Download the App</button>
-  </div>
 </div>
 
 <footer>
-  <a href="privacy-policy.html" data-i18n="privacyLink">Privacy</a>
-  <a href="terms.html" data-i18n="termsLink">Terms</a>
+    <a href="privacy-policy.html" target="_blank" data-i18n="footer.privacyLink">Privacy Policy</a>
+    <a href="terms.html" target="_blank" data-i18n="footer.termsLink">Terms</a>
+    <a href="mailto:support@join-me-app.com" data-i18n="footer.contact">Contact</a>:
+    <span class="support-email">support@join-me-app.com</span>
 </footer>
+<script src="js/en.js"></script>
+<script src="js/de.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
